# polyver

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
examples/blink/: blink.c  blink.json  blink.py
examples/example/: example.py  foo.c  foo.json
examples/hillclimb/: accelerometer_reaction_1.c  accelerometer_reaction_1.json  encoders_reaction_1.c  gyro_reaction_1.c  gyro_reaction_1.json  hillclimb.py  hillclimb_climbing_reaction_1.c  hillclimb_climbing_reaction_1.json  hillclimb_climbing_reaction_2.c  hillclimb_climbing_reaction_2.json  hillclimb_reaction_1.c  hillclimb_reaction_1.json  hillclimb_reaction_2.c  hillclimb_reaction_2.json  hillclimb_rotate_reaction_1.c  hillclimb_rotate_reaction_1.json  hillclimb_straight_reaction_1.c  hillclimb_straight_reaction_1.json  motors_reaction_1.c  motors_reaction_1.json  motors_reaction_2.c  motors_reaction_2.json  tilt_reaction_1.c  tilt_reaction_1.json  trapezoidalintegrator_reaction_1.c  trapezoidalintegrator_reaction_1.json
examples/leader_election/: leader_election.py  step.c  step.json
examples/traffic_light/: pedestrian_reaction_1.c  pedestrian_reaction_1.json  traffic_light.py  traffic_light_reaction_1.c  traffic_light_reaction_1.json  traffic_light_reaction_2.c  traffic_light_reaction_2.json  traffic_light_reaction_3.c  traffic_light_reaction_3.json
polyver/: checker.py  dsl.py  dsl_parser.py  main.py  module.py  parse_args.py  procedure.py  synthesizer.py  utils.py  verifier.py
polyver/synthesizers/: human_synthesizer.py  llm_synthesizer.py  llm_utils.py  smt2c.py  smt_parser.py  (+3 more)
(+2 files in other folders)
